// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[form ui state]: comment change 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Immutable.Record {
    \\"isChangeName\\": false,
    \\"isChangeEmail\\": false,
-   \\"isChangeComment\\": false,
+   \\"isChangeComment\\": true,
  }"
`;

exports[`[form ui state]: email change 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Immutable.Record {
    \\"isChangeName\\": false,
-   \\"isChangeEmail\\": false,
+   \\"isChangeEmail\\": true,
    \\"isChangeComment\\": false,
  }"
`;

exports[`[form ui state]: init 1`] = `
"Snapshot Diff:
  Comparing two different types of values. Expected undefined but received object."
`;

exports[`[form ui state]: name change 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Immutable.Record {
-   \\"isChangeName\\": false,
+   \\"isChangeName\\": true,
    \\"isChangeEmail\\": false,
    \\"isChangeComment\\": false,
  }"
`;
